logs_old/c185246.p0.error
/mnt/fast/nobackup/scratch4weeks/ae01116/zegenv/lib/python3.9/site-packages/torch/distributed/launch.py:178: FutureWarning: The module torch.distributed.launch is deprecated
and will be removed in future. Use torchrun.
Note that --use_env is set by default in torchrun.
If your script expects `--local_rank` argument to be set, please
change it to read from `os.environ['LOCAL_RANK']` instead. See 
https://pytorch.org/docs/stable/distributed.html#launch-utility for 
further instructions

  warnings.warn(
Traceback (most recent call last):
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/train.py", line 15, in <module>
    import models
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/models/__init__.py", line 6, in <module>
    from models.segmentor.inner_zegclip import InnerZegCLIP
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/models/segmentor/inner_zegclip.py", line 117
    self.3_weights = nn.Parameter(torch.randn(3))
          ^
SyntaxError: invalid decimal literal
Traceback (most recent call last):
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/train.py", line 15, in <module>
    import models
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/models/__init__.py", line 6, in <module>
    from models.segmentor.inner_zegclip import InnerZegCLIP
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/models/segmentor/inner_zegclip.py", line 117
    self.3_weights = nn.Parameter(torch.randn(3))
          ^
SyntaxError: invalid decimal literal
Traceback (most recent call last):
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/train.py", line 15, in <module>
Traceback (most recent call last):
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/train.py", line 15, in <module>
    import models
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/models/__init__.py", line 6, in <module>
    import models
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/models/__init__.py", line 6, in <module>
    from models.segmentor.inner_zegclip import InnerZegCLIP
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/models/segmentor/inner_zegclip.py", line 117
    self.3_weights = nn.Parameter(torch.randn(3))
          ^
SyntaxError: invalid decimal literal
    from models.segmentor.inner_zegclip import InnerZegCLIP
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/models/segmentor/inner_zegclip.py", line 117
    self.3_weights = nn.Parameter(torch.randn(3))
          ^
SyntaxError: invalid decimal literal
ERROR:torch.distributed.elastic.multiprocessing.api:failed (exitcode: 1) local_rank: 0 (pid: 26) of binary: /mnt/fast/nobackup/scratch4weeks/ae01116/zegenv/bin/python
Traceback (most recent call last):
  File "/mnt/fast/nobackup/scratch4weeks/ae01116/zegenv/lib/python3.9/runpy.py", line 197, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/mnt/fast/nobackup/scratch4weeks/ae01116/zegenv/lib/python3.9/runpy.py", line 87, in _run_code
    exec(code, run_globals)
  File "/mnt/fast/nobackup/scratch4weeks/ae01116/zegenv/lib/python3.9/site-packages/torch/distributed/launch.py", line 193, in <module>
    main()
  File "/mnt/fast/nobackup/scratch4weeks/ae01116/zegenv/lib/python3.9/site-packages/torch/distributed/launch.py", line 189, in main
    launch(args)
  File "/mnt/fast/nobackup/scratch4weeks/ae01116/zegenv/lib/python3.9/site-packages/torch/distributed/launch.py", line 174, in launch
    run(args)
  File "/mnt/fast/nobackup/scratch4weeks/ae01116/zegenv/lib/python3.9/site-packages/torch/distributed/run.py", line 710, in run
    elastic_launch(
  File "/mnt/fast/nobackup/scratch4weeks/ae01116/zegenv/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 131, in __call__
    return launch_agent(self._config, self._entrypoint, list(args))
  File "/mnt/fast/nobackup/scratch4weeks/ae01116/zegenv/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 259, in launch_agent
    raise ChildFailedError(
torch.distributed.elastic.multiprocessing.errors.ChildFailedError: 
============================================================
/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/train.py FAILED
------------------------------------------------------------
Failures:
[1]:
  time      : 2024-08-24_14:10:00
  host      : ae01116-185246.0-aisurrey02.surrey.ac.uk
  rank      : 1 (local_rank: 1)
  exitcode  : 1 (pid: 27)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[2]:
  time      : 2024-08-24_14:10:00
  host      : ae01116-185246.0-aisurrey02.surrey.ac.uk
  rank      : 2 (local_rank: 2)
  exitcode  : 1 (pid: 28)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[3]:
  time      : 2024-08-24_14:10:00
  host      : ae01116-185246.0-aisurrey02.surrey.ac.uk
  rank      : 3 (local_rank: 3)
  exitcode  : 1 (pid: 29)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
------------------------------------------------------------
Root Cause (first observed failure):
[0]:
  time      : 2024-08-24_14:10:00
  host      : ae01116-185246.0-aisurrey02.surrey.ac.uk
  rank      : 0 (local_rank: 0)
  exitcode  : 1 (pid: 26)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
============================================================
